--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -4,7 +4,76 @@
 // Sass:
 // https://fontawesome.com/how-to-use/on-the-web/using-with/sass
 
+@import "partials/reset";
+@import "modules/all";
 
-body{
-  background-color: #BADA55;
+body {
+  background-color: $color-screen-background;
+  font-family: $regular-font;
+}
+
+header {
+  background-color: $color-header;
+  .container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo {
+      font-family: $logo-font;
+      color: $color-logo-orange;
+      font-size: 45px;
+      width: 40%;
+      span {
+        color: $color-logo-white;
+      }
+    }
+    .headerList {
+      width: 55%;
+      text-transform: uppercase;
+      display: flex;
+      justify-content: space-between;
+      a {
+        text-decoration: none;
+        color: $color-logo-white;
+        &:first-child {
+          color: $color-logo-orange;
+        }
+      }
+    }
+  }
+}
+
+.carousel {
+  width: 100%;
+  padding: 0 75px;
+  height: 450px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $color-screen-background;
+  i {
+    font-size: 40px;
+    opacity: 0.7;
+  }
+  .slide {
+    display: none;
+    width: 50%;
+    .visible {
+      display: block;
+    }
+    h2 {
+      display: flex;
+      justify-content: center;
+      font-size: 40px;
+      padding-bottom: 5px;
+    }
+    div {
+      text-align: center;
+      font-size: 25px;
+    }
+  }
+
 }
