--- a/development/scss/partials/_reset.scss
+++ b/development/scss/partials/_reset.scss
@@ -2,20 +2,24 @@
 	HTML5 Reset :: style.css
 	----------------------------------------------------------
 	We have learned much from/been inspired by/taken code where offered from:
-
 	Eric Meyer					:: http://meyerweb.com
 	HTML5 Doctor				:: http://html5doctor.com
 	and the HTML5 Boilerplate	:: http://html5boilerplate.com
-
 -*/
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 14px;
   font-weight: normal;
   vertical-align: baseline;
   background: transparent;
+}
+
+.container {
+  width: 1024px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 article, aside, figure, footer, header, nav, section, details, summary {
@@ -147,8 +151,8 @@ textarea {
 }
 
 table {
-  font-size: inherit;
-  font: 100%;
+  font-size: 100%;
+  font: inherit;
 }
 
 small {
