--- a/development/scss/partials/app/_headerApp.scss
+++ b/development/scss/partials/app/_headerApp.scss
@@ -33,7 +33,7 @@
       }
       i {
         font-size: 50px;
-        color: $color-logo-orange;
+        color: $color-highlights;
       }
     }
   }
