--- a/development/scss/main.scss
+++ b/development/scss/main.scss
@@ -23,3 +23,4 @@
 @import "partials/app/panelApp/menuApp";
 @import "partials/app/panelApp/widgetsApp";
 @import "partials/app/panelApp/weekPlanApp";
+@import "partials/app/panelApp/prev&nextApp";
