--- a/development/scss/partials/app/panelApp/_weekPlanApp.scss
+++ b/development/scss/partials/app/panelApp/_weekPlanApp.scss
@@ -1,4 +1,5 @@
 .dashboard {
+  font-family: $regular-font;
   .screen {
     .anotherTime {
       .container {
@@ -12,17 +13,122 @@
           border: 1px dashed $color-row-font;
           .plan {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             width: 90%;
-            height: 10%;
-            border-bottom: 1px solid rgba(161, 161, 148, 0.5);
             margin: 0 auto;
-            h2 {
-              font-size: 20px;
-              color: $color-highlights;
-              span {
+            .planTitle {
+              width: 100%;
+              height: 10%;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              margin-top: 10px;
+              h2 {
                 font-size: 20px;
+                color: $color-highlights;
+                text-align: center;
+                margin-bottom: 10px;
+                span {
+                  font-size: 20px;
+                }
+              }
+            }
+            .days {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 25px;
+                font-weight: bold;
+                color: $color-header;
+                margin-top: 10px;
+                margin-bottom: 5px;
+                //margin: 10px 5px 5px 5px;
+                &:first-child {
+                  width: 20%;
+                }
+              }
+            }
+            .breakfast {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 20px;
+                color: rgba(161, 161, 148, 0.5);
+                margin: 10px 0;
+                padding-left: 5px;
+                &:first-child {
+                  width: 20%;
+                }
+              }
+            }
+            .secondBreakfast {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 20px;
+                color: rgba(161, 161, 148, 0.5);
+                margin: 10px 0;
+                padding-left: 5px;
+                &:first-child {
+                  width: 20%;
+                }
+              }
+            }
+            .soup {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 20px;
+                color: rgba(161, 161, 148, 0.5);
+                margin: 10px 0;
+                padding-left: 5px;
+                &:first-child {
+                  width: 20%;
+                }
+              }
+            }
+            .secondMeal {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 20px;
+                color: rgba(161, 161, 148, 0.5);
+                margin: 10px 0;
+                padding-left: 5px;
+                &:first-child {
+                  width: 20%;
+                }
+              }
+            }
+            .diner {
+              width: 100%;
+              display: flex;
+              justify-content: space-between;
+              border-bottom: 1px solid rgba(161, 161, 148, 0.7);
+              p {
+                width: calc(100% / 6);
+                font-size: 20px;
+                color: rgba(161, 161, 148, 0.5);
+                margin: 10px 0;
+                padding-left: 5px;
+                &:first-child {
+                  width: 20%;
+                }
               }
             }
           }
