dodano funkcjonalnosc przycisku gotowe

--- a/development/scss/custom.scss
+++ b/development/scss/custom.scss
@@ -16,6 +16,7 @@
 @import "partials/newsletter";
 @import "partials/aboutMe";
 @import "partials/footer";
+@import "partials/app/panelApp/messageForm";
 
 // Aplikacja
 
