--- a/development/scss/partials/app/panelApp/_weekPlanApp.scss
+++ b/development/scss/partials/app/panelApp/_weekPlanApp.scss
@@ -1,6 +1,7 @@
 .dashboard {
   font-family: $regular-font;
   .screen {
+    display: none;
     .anotherTime {
       .container {
         .top {
