dodano layout dodania przepisu oraz funkcjonalnosc przycisku dodaj przepis

--- a/development/scss/custom.scss
+++ b/development/scss/custom.scss
@@ -25,3 +25,4 @@
 @import "partials/app/panelApp/widgetsApp";
 @import "partials/app/panelApp/weekPlanApp";
 @import "partials/app/panelApp/prev&nextApp";
+@import "partials/app/panelApp/newRecipe";
