--- a/development/scss/partials/app/_headerApp.scss
+++ b/development/scss/partials/app/_headerApp.scss
@@ -30,8 +30,10 @@
       .name {
         font-size: 25px;
         color: $color-logo-white;
+
       }
       i {
+        padding: 0 30px;
         font-size: 50px;
         color: $color-highlights;
       }
