--- a/development/scss/custom.scss
+++ b/development/scss/custom.scss
@@ -27,3 +27,4 @@
 @import "partials/app/panelApp/prev&nextApp";
 @import "partials/app/panelApp/newRecipe";
 @import "partials/app/panelApp/recipes";
+@import "partials/app/panelApp/schedules";
