--- a/development/scss/custom.scss
+++ b/development/scss/custom.scss
@@ -26,3 +26,5 @@
 @import "partials/app/panelApp/weekPlanApp";
 @import "partials/app/panelApp/prev&nextApp";
 @import "partials/app/panelApp/newRecipe";
+@import "partials/app/panelApp/recipes";
+@import "partials/app/panelApp/schedules";
