Zrobione id przy przepisach i pokazuje w komunikacie ile jest przepisów

--- a/development/scss/partials/app/panelApp/_widgetsApp.scss
+++ b/development/scss/partials/app/panelApp/_widgetsApp.scss
@@ -80,6 +80,9 @@
               p {
                 width: 85%;
                 font-size: 18px;
+                #numRecipes {
+                  font-size: 18px;
+                }
               }
               .times {
                 width: 20px;
