tworzenie strony dodajacej nowy plan

--- a/development/scss/custom.scss
+++ b/development/scss/custom.scss
@@ -28,3 +28,4 @@
 @import "partials/app/panelApp/newRecipe";
 @import "partials/app/panelApp/recipes";
 @import "partials/app/panelApp/schedules";
+@import "partials/app/panelApp/addPlan";
