--- a/development/scss/partials/app/panelApp/_addPlan.scss
+++ b/development/scss/partials/app/panelApp/_addPlan.scss
@@ -189,19 +189,23 @@ $max-width: 100%;
             justify-content: center;
             border-bottom: 1px solid $color-expand-icons;
             .day-week{
-                font-size: 20px;
+                font-size: 15px;
                 font-weight: bold;
                 padding: 10px 5px;
                 text-transform: uppercase;
-                text-align: center;
             }
-            select{
+            .col-1{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                select{
                 border-radius: 5px;
                 -webkit-border-radius: 5px;
                 -moz-border-radius: 5px;
                 -ms-border-radius: 5px;
                 -o-border-radius: 5px;
                 border: 0.5px solid $color-expand-icons
+            }
             }
         }
         .table-header{
